--- a/index.html
+++ b/index.html
@@ -480,6 +480,16 @@
             transform: translateY(0);
         }
     </style>
+
+    <!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'GA_MEASUREMENT_ID');
+</script>
+    
 </head>
 <body>
     <!-- Navigation -->
@@ -587,17 +597,17 @@
                 <h2>Connect With Me</h2>
                 <p>Let's discuss cybersecurity trends, collaborate on research, or share insights</p>
                 <div class="social-links">
-                    <a href="https://github.com/yourusername" class="social-link" title="GitHub">
+                    <a href="https://github.com/ltinhobwhat" class="social-link" title="GitHub">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a href="https://linkedin.com/in/yourusername" class="social-link" title="LinkedIn">
+                    <a href="https://linkedin.com/in/aurent-c-88392a186" class="social-link" title="LinkedIn">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
-                    <a href="mailto:your.email@example.com" class="social-link" title="Email">
+                    <a href="mailto:ltinhobwhat@gmail.com" class="social-link" title="Email">
                         <i class="fas fa-envelope"></i>
                     </a>
-                    <a href="https://twitter.com/yourusername" class="social-link" title="Twitter">
-                        <i class="fab fa-twitter"></i>
+                    <a href="https://instagram.com/ltinhobwhat" class="social-link" title="Instagram">
+                        <i class="fab fa-instagram"></i>
                     </a>
                 </div>
             </div>
