--- a/index.html
+++ b/index.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Cyber Inquirer - Digital Defense Intelligence</title>
-    <!-- Using alternative CDN for icons -->
+    <!-- Using reliable CDN for icons -->
     <link href="https://unpkg.com/@fortawesome/fontawesome-free@6.0.0/css/all.min.css" rel="stylesheet">
+    <!-- Fallback for social icons -->
+    <style>
+        .social-icon {
+            display: inline-block;
+            width: 24px;
+            height: 24px;
+            background-size: contain;
+            background-repeat: no-repeat;
+            background-position: center;
+        }
+        .github-icon { background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>'); }
+        .linkedin-icon { background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/></svg>'); }
+        .email-icon { background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M24 5.457v13.909c0 .904-.732 1.636-1.636 1.636h-3.819V11.73L12 16.64l-6.545-4.91v9.273H1.636A1.636 1.636 0 0 1 0 19.366V5.457c0-.904.732-1.636 1.636-1.636h3.819l6.545 4.91 6.545-4.91h3.819A1.636 1.636 0 0 1 24 5.457z"/></svg>'); }
+        .instagram-icon { background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/></svg>'); }
+    </style>
     <style>
         * {
             margin: 0;
@@ -236,7 +251,7 @@
             font-size: 1.2rem;
         }
 
-        /* PDF Preview Container - Alternative approach */
+        /* PDF Preview Container - Styled like the logo */
         .pdf-preview-container {
             background: var(--white);
             border-radius: 15px;
@@ -250,67 +265,91 @@
             width: 100%;
             max-width: 400px;
             height: 500px;
-            background: var(--gradient-primary);
+            background: #f5f5f0;
+            border: 8px solid #c0c0c0;
             border-radius: 10px;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            color: var(--white);
-            margin-bottom: 1.5rem;
+            color: var(--primary-navy);
+            margin: 0 auto 1.5rem;
             position: relative;
             overflow: hidden;
-        }
-
-        .pdf-preview-image::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><rect width="100" height="100" fill="none" stroke="rgba(255,255,255,0.1)" stroke-width="0.5"/><text x="50" y="15" text-anchor="middle" fill="rgba(255,255,255,0.3)" font-size="8">THE</text><text x="50" y="35" text-anchor="middle" fill="rgba(255,255,255,0.6)" font-size="12" font-weight="bold">CYBER</text><text x="50" y="55" text-anchor="middle" fill="rgba(255,255,255,0.6)" font-size="12" font-weight="bold">INQUIRER</text><text x="50" y="75" text-anchor="middle" fill="rgba(255,255,255,0.3)" font-size="6">2025 Cybersecurity Landscape</text><text x="50" y="85" text-anchor="middle" fill="rgba(255,255,255,0.3)" font-size="6">AI Attacks &amp; Zero Trust</text></svg>');
+            box-shadow: inset 0 0 20px rgba(0,0,0,0.1);
         }
 
         .pdf-preview-content {
             position: relative;
             z-index: 2;
+            text-align: center;
+            padding: 2rem;
+        }
+
+        .logo-top-line {
+            width: 60px;
+            height: 3px;
+            background: var(--primary-navy);
+            margin: 0 auto 10px;
+        }
+
+        .logo-bottom-line {
+            width: 80px;
+            height: 3px;
+            background: var(--primary-navy);
+            margin: 10px auto 20px;
+        }
+
+        .logo-title-the {
+            font-size: 1rem;
+            font-weight: 600;
+            letter-spacing: 4px;
+            margin-bottom: 8px;
+            color: var(--primary-navy);
+        }
+
+        .logo-title-main {
+            font-size: 2.8rem;
+            font-weight: 900;
+            letter-spacing: -1px;
+            line-height: 0.9;
+            margin-bottom: 8px;
+            color: var(--primary-navy);
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
+        }
+
+        .logo-subtitle {
+            font-size: 0.7rem;
+            font-weight: 500;
+            letter-spacing: 2px;
+            margin-bottom: 20px;
+            color: var(--medium-gray);
         }
 
         .pdf-icon {
-            font-size: 4rem;
+            font-size: 2rem;
             margin-bottom: 1rem;
-            opacity: 0.8;
-        }
-
-        .pdf-title {
-            font-size: 1.5rem;
-            font-weight: 700;
-            margin-bottom: 0.5rem;
-        }
-
-        .pdf-subtitle {
-            font-size: 1rem;
-            opacity: 0.8;
-            margin-bottom: 2rem;
+            opacity: 0.6;
         }
 
         .preview-button {
-            background: rgba(255, 255, 255, 0.2);
+            background: var(--primary-navy);
             color: var(--white);
-            border: 2px solid rgba(255, 255, 255, 0.3);
+            border: 2px solid var(--primary-navy);
             padding: 0.8rem 2rem;
             border-radius: 30px;
             text-decoration: none;
             font-weight: 600;
             transition: all 0.3s ease;
-            backdrop-filter: blur(10px);
+            font-size: 0.9rem;
         }
 
         .preview-button:hover {
             background: var(--white);
             color: var(--primary-navy);
-            border-color: var(--white);
+            border-color: var(--primary-navy);
+            transform: translateY(-2px);
+            box-shadow: 0 8px 20px rgba(30, 58, 95, 0.3);
         }
 
         .pdf-stats {
@@ -490,11 +529,11 @@
             box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
         }
 
-        /* Custom icons for social links */
-        .github-icon::before { content: '🐱'; }
-        .linkedin-icon::before { content: '💼'; }
-        .email-icon::before { content: '✉️'; }
-        .twitter-icon::before { content: '🐦'; }
+        /* SVG Icons for social links */
+        .social-link i {
+            width: 24px;
+            height: 24px;
+        }
 
         /* Footer */
         .footer {
@@ -643,9 +682,12 @@
                 <div class="pdf-preview-container animate-on-scroll">
                     <div class="pdf-preview-image">
                         <div class="pdf-preview-content">
+                            <div class="logo-top-line"></div>
+                            <div class="logo-title-the">THE</div>
+                            <div class="logo-title-main">CYBER<br>INQUIRER</div>
+                            <div class="logo-bottom-line"></div>
+                            <div class="logo-subtitle">2025 CYBERSECURITY LANDSCAPE</div>
                             <div class="pdf-icon">📄</div>
-                            <div class="pdf-title">Issue #1</div>
-                            <div class="pdf-subtitle">2025 Cybersecurity Landscape</div>
                             <a href="cyber-inquirer-issue-1.pdf" target="_blank" class="preview-button">
                                 Open PDF Preview
                             </a>
@@ -705,10 +747,18 @@
                 <h2>Connect With Me</h2>
                 <p>Let's discuss cybersecurity trends, collaborate on research, or share insights</p>
                 <div class="social-links">
-                    <a href="https://github.com/ltinhobwhat" class="social-link github-icon" title="GitHub"></a>
-                    <a href="https://linkedin.com/in/yourusername" class="social-link linkedin-icon" title="LinkedIn"></a>
-                    <a href="mailto:your.email@example.com" class="social-link email-icon" title="Email"></a>
-                    <a href="https://twitter.com/yourusername" class="social-link twitter-icon" title="Twitter"></a>
+                    <a href="https://github.com/ltinhobwhat" class="social-link" title="GitHub">
+                        <i class="fab fa-github"></i>
+                    </a>
+                    <a href="https://linkedin.com/in/laurent-c-88392a186" class="social-link" title="LinkedIn">
+                        <i class="fab fa-linkedin-in"></i>
+                    </a>
+                    <a href="mailto:ltinhobwhat@gmail.com" class="social-link" title="Email">
+                        <i class="fas fa-envelope"></i>
+                    </a>
+                    <a href="https://instagram.com/ltinhobwhat" class="social-link" title="Instagram">
+                        <i class="fab fa-instagram"></i>
+                    </a>
                 </div>
             </div>
         </div>
